// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Should show 'pin' label 1`] = `
<a
  className="pin-btn"
  href="#"
  onClick={[Function]}
>
  <span
    onClick={[Function]}
  >
    Pin
  </span>
</a>
`;

exports[`(2) Should show 'unpin' label 1`] = `
<a
  className="pin-btn"
  href="#"
  onClick={[Function]}
>
  <span
    onClick={[Function]}
  >
    Unpin
  </span>
</a>
`;
